change domain for new deployment

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tshiil",
   "version": "0.1.0",
-  "homepage": "https://tshiil.com/",
+  "homepage": "https://tshiil.omaratri.com/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
